--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <body>
     <section>
       <button class="show-modal">Show Modal</button>
+      <span class="overlay"></span>
+      <div class="modal-box">
+        <i class="fa-regular fa-circle-check"></i>
+        <h3>Completed</h3>
+        <p>You have sucessfully downloaded all the source code files.</p>
+      </div>
     </section>
     <script src="app.js"></script>
   </body>
