--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <i class="fa-regular fa-circle-check"></i>
         <h3>Completed</h3>
         <p>You have sucessfully downloaded all the source code files.</p>
+        <div class="buttons">
+          <button class="close-btn">OK, Close</button>
+          <button>Open File</button>
+        </div>
       </div>
     </section>
     <script src="app.js"></script>
